modules/gdscript/tests/scripts/analyzer/errors/setter_with_too_many_args.gd
var a: int: set = set_named

func test():
	pass

func set_named(name: StringName, value: int, oops: int) -> void:
	prints("set_named", name, value)
